# llm-chatbots

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  gunicorn_conf.py  manage.py  pyproject.toml
.github/workflows/: backend-ci.yaml
app/: config.py  deps.py  exception_handlers.py  exceptions.py  logging_config.py  main.py  middlewares.py  typings.py
app/adapters/agents/: __init__.py  base_agent.py  chatbot.py  langchain.py  rag.py  repository.py  utils.py
app/adapters/aws/: __init__.py  file_storage.py
app/adapters/qdrant/: __init__.py  vector_store.py
app/adapters/sqlalchemy/: __init__.py  base_repository.py  bots_repository.py  users_repository.py
app/adapters/stubs/: __init__.py  agent.py
app/cli/: __init__.py  fixtures.py
app/cli/fixtures_data/: bots.json
app/db/: __init__.py  base_model.py  database.py
app/helpers/: auth.py
app/models/: __init__.py  bots.py  users.py
app/ports/: __init__.py  agents.py  bots_repository.py  file_storage.py  users_repository.py  vector_store.py
app/routers/: __init__.py  common_schemas.py
app/routers/auth/: endpoints.py  schemas.py
app/routers/bots/: endpoints.py  schemas.py
app/routers/health/: endpoints.py
app/routers/uploads/: endpoints.py  schemas.py
app/routers/users/: endpoints.py  schemas.py
app/utils/: __init__.py
docker/: entrypoint.sh
docker/localstack/: setup.sh
migrations/: env.py
migrations/versions/: 28159f9aeffc_add_bot_types_and_documents.py  7f4d489f48e5_update_bot_documents.py  e859a87e9bde_add_bot_model.py  f09cdf5c98f0_add_users.py
tests/: conftest.py  context.py  factories.py  test_fixtures.py  test_health.py  test_main.http  test_vector_stores.py
tests/auth/: test_auth_endpoints.py
tests/bots/: test_agent_utils.py  test_bot_endpoints.py  test_bot_repository.py  test_chatbot_agents.py  test_fixtures.py
tests/contracts/: __init__.py  agents_contract.py
tests/middlewares/: test_middlewares.py
tests/uploads/: test_file_storage.py  test_uploads_endpoints.py
tests/users/: test_user_model.py  test_users_endpoints.py  test_users_repository.py
